// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collect/visualize integration creates graph based on integration data 1`] = `
"<!DOCTYPE html>
    <html lang=\\"en\\">
    <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <title>Integration SDK Graph</title>
    </head>
    <body style=\\"height:100vh;width:100%\\">
        <div id=\\"integration-graph\\" style=\\"height:100vh;width:100%\\"></div>
        <script type=\\"text/javascript\\" src=\\"https://unpkg.com/vis-network/standalone/umd/vis-network.min.js\\"></script>
        <script type=\\"text/javascript\\">
            var nodes = new vis.DataSet([{\\"id\\":\\"account:1234\\",\\"label\\":\\"Account 1234\\"},{\\"id\\":\\"user:12345\\",\\"label\\":\\"User 12345\\"}]);
            var edges = new vis.DataSet([{\\"from\\":\\"account:1234\\",\\"to\\":\\"user:12345\\",\\"label\\":\\"HAS\\"}]);
            // create a network
            var container = document.getElementById(\\"integration-graph\\");
            var data = {
              nodes: nodes,
              edges: edges
            };
            var options = {\\"edges\\":{\\"arrows\\":{\\"to\\":{\\"enabled\\":true}}}};
            var network = new vis.Network(container, data, options);
          </script>
    </body>
    </html>"
`;

exports[`visualize writes graph to html file 1`] = `
"<!DOCTYPE html>
    <html lang=\\"en\\">
    <head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <title>Integration SDK Graph</title>
    </head>
    <body style=\\"height:100vh;width:100%\\">
        <div id=\\"integration-graph\\" style=\\"height:100vh;width:100%\\"></div>
        <script type=\\"text/javascript\\" src=\\"https://unpkg.com/vis-network/standalone/umd/vis-network.min.js\\"></script>
        <script type=\\"text/javascript\\">
            var nodes = new vis.DataSet([{\\"id\\":\\"entity:1\\",\\"label\\":\\"Entity Name\\"},{\\"id\\":\\"entity:2\\",\\"label\\":\\"Entity Name\\"}]);
            var edges = new vis.DataSet([{\\"from\\":\\"entity:1\\",\\"to\\":\\"entity:2\\",\\"label\\":\\"HAS\\"}]);
            // create a network
            var container = document.getElementById(\\"integration-graph\\");
            var data = {
              nodes: nodes,
              edges: edges
            };
            var options = {\\"edges\\":{\\"arrows\\":{\\"to\\":{\\"enabled\\":true}}}};
            var network = new vis.Network(container, data, options);
          </script>
    </body>
    </html>"
`;
